Site: Add Laravel Socialite + VK & Yandex

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -2,12 +2,15 @@
     "\":user\" is now your subscriber": "Теперь \":user\" ваш подписчик",
     "(and :count more error)": "(и ещё :count ошибка)",
     "(and :count more errors)": "(и ещё :count ошибок)",
+    ":activity: athlete :athlete and :count others liked you": ":activity: спортсмен :athlete и ещё :count поставили вам зачёт",
+    ":activity: athlete :athlete liked you": ":activity: спортсмен :athlete поставил вам зачёт",
     ":distance km": ":distance км",
     ":distance m": ":distance м",
     ":elevation m": ":elevation м",
     ":speed km/h": ":speed км/ч",
     ":user - subscribers": ":user - подписчики",
     ":user - subscriptions": ":user - подписки",
+    ":user comments on discussion :activity": ":user комментирует обсуждение :activity",
     "A Timeout Occurred": "Истекло время ожидания",
     "Accept": "Принять",
     "Accepted": "Принято",
@@ -188,6 +191,7 @@
     "No announcements yet": "Анонсов пока нет",
     "No Content": "Содержимое отсутствует",
     "No new requests": "Новых запросов нет",
+    "No results found for ':query'": "Нет результатов для запроса ':query'",
     "Non-Authoritative Information": "Информация не авторитетна",
     "Not Acceptable": "Неприемлемо",
     "Not authorized": "Не авторизован",
@@ -296,9 +300,8 @@
     "Subscribers": "Подписчики",
     "Subscription request": "Запрос на подписку",
     "Subscription request cancelled": "Запрос на подписку отменен",
-    "User ':user' has subscribed to you": "Пользователь ':user' подписался на вас",
-    "Subscription request from ':user'": "Запрос на подписку от ':user'",
     "Subscription request from \":user\" declined": "Запрос на подписку от \":user\" отклонён",
+    "Subscription request from ':user'": "Запрос на подписку от ':user'",
     "Subscription request sent": "Запрос на подписку отправлен",
     "Subscription requests": "Запросы на подписку",
     "Subscription requests: :count": "Запросы на подписку: :count",
@@ -356,6 +359,7 @@
     "URI Too Long": "URI слишком длинный",
     "Use Proxy": "Используй прокси",
     "User": "Пользователь",
+    "User ':user' has subscribed to you": "Пользователь ':user' подписался на вас",
     "User not found": "Пользователь не найден",
     "Users": "Пользователи",
     "Users: :count": "Пользователи: :count",
@@ -379,6 +383,7 @@
     "Workouts not found. Record one using :zdrava-app or :upload manually": "Тренировки не найдены. Запишите их с помощью :zdrava-app или :upload вручную",
     "Workouts: :count": "Тренировок: :count",
     "Yes": "Да",
+    "You already subscribed to this user": "Вы уже подписаны на этого пользователя",
     "You are receiving this email because we received a password reset request for your account.": "Вы получили это письмо, потому что мы получили запрос на сброс пароля для Вашей учётной записи.",
     "You have no active tasks": "У вас нет активных задач",
     "You have successfully registered & logged in!": "Вы успешно зарегистрировались и вошли в систему!",
@@ -386,10 +391,5 @@
     "Your provided credentials do not match in our records": "Предоставленные вами учетные данные не совпадают с нашими записями",
     "Your tasks": "Ваши задачи",
     "Zdrava account deleting": "Удаление аккаунта Zdrava",
-    "Zdrava android app": "Zdrava для android",
-    "No results found for ':query'": "Нет результатов для запроса ':query'",
-    "You already subscribed to this user": "Вы уже подписаны на этого пользователя",
-    ":user comments on discussion :activity": ":user комментирует обсуждение :activity",
-    ":activity: athlete :athlete liked you": ":activity: спортсмен :athlete поставил вам зачёт",
-    ":activity: athlete :athlete and :count others liked you": ":activity: спортсмен :athlete и ещё :count поставили вам зачёт"
+    "Zdrava android app": "Zdrava для android"
 }
