Site: Initial training calendar

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -391,5 +391,6 @@
     "Your provided credentials do not match in our records": "Предоставленные вами учетные данные не совпадают с нашими записями",
     "Your tasks": "Ваши задачи",
     "Zdrava account deleting": "Удаление аккаунта Zdrava",
-    "Zdrava android app": "Zdrava для android"
+    "Zdrava android app": "Zdrava для android",
+    "Training calendar": "Календарь тренировок"
 }
