Site: Better handling for color theme

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -371,7 +371,7 @@
     "View :name": "Посмотреть :name",
     "Waiting for confirmation": "Ожидание подтверждения",
     "Walking": "Ходьба",
-    "We already have :count people": "С нами уже :count человек(а)",
+    "We already have :count": "С нами уже :count",
     "We're miss you": "Мы скучали по вам",
     "Web Server is Down": "Веб-сервер не работает",
     "Welcome back!": "С возвращением!",
