--- a/lang/ru.json
+++ b/lang/ru.json
@@ -393,5 +393,6 @@
     "Your tasks": "Ваши задачи",
     "Zdrava account deleting": "Удаление аккаунта Zdrava",
     "Zdrava android app": "Zdrava для android",
-    "Virtual ride": "Виртуальный заезд"
+    "Virtual ride": "Виртуальный заезд",
+    "Link copied to clipboard!": "Ссылка скопирована в буфер обмена!"
 }
