Updare rector and fix errors

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -4,6 +4,7 @@
     "(and :count more errors)": "(и ещё :count ошибок)",
     ":activity: athlete :athlete and :count others liked you": ":activity: спортсмен :athlete и ещё :count поставили вам зачёт",
     ":activity: athlete :athlete liked you": ":activity: спортсмен :athlete поставил вам зачёт",
+    ":count from :total": ":count из :total",
     ":distance km": ":distance км",
     ":distance m": ":distance м",
     ":elevation m": ":elevation м",
@@ -44,6 +45,7 @@
     "Before you start your search, you may know these people": "Пока вы не начали поиск, возможно вы знаете этих людей",
     "Bright": "Светлая",
     "Browse": "Просмотр",
+    "Cadence": "Каденс",
     "Cancel": "Отмена",
     "Cancel request": "Отменить запрос",
     "Choose": "Выбрать",
@@ -80,6 +82,7 @@
     "Device / Application": "Устройство / Приложение",
     "Disable": "Отключить",
     "Discard": "Отказаться",
+    "Disconnect": "Отключить",
     "Distance": "Дистанция",
     "Donate with QR-code": "или отсканируйте QR-код",
     "Done": "Готово",
@@ -129,6 +132,7 @@
     "Hide": "Скрыть",
     "Hide :name": "Скрыть :name",
     "Home": "На главную",
+    "HRM": "Пульсометр",
     "HTTP Version Not Supported": "Версия HTTP не поддерживается",
     "I'm a teapot": "Я - чайник",
     "If you did not create an account, no further action is required.": "Если Вы не создавали учетную запись, никаких дополнительных действий не требуется.",
@@ -152,6 +156,7 @@
     "Legal terms": "Юридические условия",
     "Length Required": "Необходима длина",
     "Like": "Нравится",
+    "Link copied to clipboard!": "Ссылка скопирована в буфер обмена!",
     "Links": "Ссылки",
     "Load": "Загрузить",
     "Localize": "Локализовать",
@@ -228,6 +233,7 @@
     "Photo": "Фотография",
     "Please click the button below to verify your email address.": "Пожалуйста, нажмите кнопку ниже, чтобы подтвердить свой адрес электронной почты.",
     "Please verify your email address": "Пожалуйста подтвердите ваш адрес электронной почты",
+    "Power meter": "Мощемер",
     "Precondition Failed": "Условие ложно",
     "Precondition Required": "Требуется предусловие",
     "Preview": "Предпросмотр",
@@ -370,6 +376,7 @@
     "Version history": "История версий",
     "View": "Просмотр",
     "View :name": "Посмотреть :name",
+    "Virtual ride": "Виртуальный заезд",
     "Waiting for confirmation": "Ожидание подтверждения",
     "Walking": "Ходьба",
     "We already have :count": "С нами уже :count",
@@ -392,12 +399,5 @@
     "Your provided credentials do not match in our records": "Предоставленные вами учетные данные не совпадают с нашими записями",
     "Your tasks": "Ваши задачи",
     "Zdrava account deleting": "Удаление аккаунта Zdrava",
-    "Zdrava android app": "Zdrava для android",
-    "Virtual ride": "Виртуальный заезд",
-    "Link copied to clipboard!": "Ссылка скопирована в буфер обмена!",
-    ":count from :total": ":count из :total",
-    "Disconnect": "Отключить",
-    "HRM": "Пульсометр",
-    "Cadence": "Каденс",
-    "Power meter": "Мощемер"
+    "Zdrava android app": "Zdrava для android"
 }
