--- a/lang/ru.json
+++ b/lang/ru.json
@@ -400,5 +400,6 @@
     "Your tasks": "Ваши задачи",
     "Zdrava account deleting": "Удаление аккаунта Zdrava",
     "Zdrava android app": "Zdrava для android",
-    "ANT+ sensor test": "Тест датчиков ANT+"
+    "ANT+ sensor test": "Тест датчиков ANT+",
+    "Back": "Назад"
 }
