Improved segments loading & display

--- a/lang/be.json
+++ b/lang/be.json
@@ -397,5 +397,6 @@
     "Your provided credentials do not match in our records": "Пададзеныя вамі ўліковыя дадзеныя не супадаюць з нашымі запісамі",
     "Your tasks": "Вашы задачы",
     "Zdrava account deleting": "Выдаленне рахунку Zdrava",
-    "Zdrava android app": "Zdrava для Android"
+    "Zdrava android app": "Zdrava для Android",
+    "Your selected area is too large!": "Выбраная вобласць занадта вялікая"
 }
